<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".registroPersona">

    <TextView
        android:id="@+id/tvTituloPersona"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tvTituloPersona"
        android:textAlignment="center"
        android:textColor="@color/color1"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/etNombres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/etNombres"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/etApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/etApellidos"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/etDocumento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/etDocumento"
        android:inputType="text"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btnTransaccionP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/color3"
        android:text="@string/btnTransaccionP" />

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:textColor="@color/white"
        android:text="Volver"
        android:textAlignment="center" />
</LinearLayout>