<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <TextView
            android:id="@+id/tvBienvenida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color1"
            android:text="@string/tvBienvenida"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <Button
            android:id="@+id/btnTransaccio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/color4"
            android:onClick="goTrans"
            android:text="@string/btnTransaccion"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnPerson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/btnTransaccio"
            android:backgroundTint="@color/color3"
            android:textColor="@color/white"
            android:text="@string/btnPersona" />
    </RelativeLayout>
</LinearLayout>