<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterTransaccion">

    <Spinner
        android:id="@+id/spOrigen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/spDivisas"
        android:minHeight="48dp"/>

    <Spinner
        android:id="@+id/spDestino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/spDivisas"
        android:minHeight="48dp"/>
    <EditText
        android:id="@+id/etMonto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:hint="@string/etMonto"/>

    <EditText
        android:id="@+id/etTasa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:hint="@string/etTasa"/>

    <Button
        android:id="@+id/btnCambiar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnTransaccionP"
        android:backgroundTint="@color/color3"
        android:textSize="18dp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnHome"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:textColor="@color/white"
        android:text="Volver"
        android:textAlignment="center" />
</LinearLayout>